[FIX] point_of_sale: fix css for cash in/out popup
Current behavior:
When the text for the button in the cash in/out popup is too long, the
first number of the amount is hidden behind the currency symbol.

Steps to reproduce:
- Install l10n_bo and PoS
- Switch language to Spanish
- Create and open a PoS with a cash payment method
- Open the cash in/out popup, enter a value.
- The first number of the amount is hidden behind the currency symbol.

opw-3324406

closes odoo/odoo#124875

--- a/addons/point_of_sale/static/src/app/navbar/cash_move_popup/cash_move_popup.scss
+++ b/addons/point_of_sale/static/src/app/navbar/cash_move_popup/cash_move_popup.scss
@@ -40,25 +40,6 @@
         }
     }
 
-    .input-field {
-        position: relative;
-        flex-grow: 1;
-
-        .currency {
-            position: absolute;
-            right: 10px;
-            top: 10px;
-        }
-
-        .left-currency {
-            position: absolute;
-            left: 10px;
-            top: 10px;
-            background-color: #fff;
-            padding-right: 8px;
-        }
-    }
-
     textarea {
         resize: none;
         margin-top: 10px;
@@ -84,6 +65,23 @@
         .button.cancel {
             margin-right: 0;
         }
+    }
+
+    .input-container {
+        padding: 0px;
+        padding-left: 5px;
+    }
+
+    .input-container input,
+    .input-container input:focus {
+        position: relative;
+        flex-grow: 1;
+        border: none;
+        outline: none;
+        box-shadow: none;
+        background-color: transparent;
+        padding: 0px;
+        padding-left: 5px;
     }
 }
 
